fixed scrollbar

--- a/css/_normalize.scss
+++ b/css/_normalize.scss
@@ -42,7 +42,7 @@ address {
 }
 
 .wrapper {
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
     min-height: 100svh;
 }
